# chess_engine

./: CMakeLists.txt
include/: BoardRenderer.h  Debug.h  GameBoard.h  MoveSearcher.h
src/: BoardRenderer.cpp  GameBoard.cpp  MoveSearcher.cpp  main.cpp
